--- a/tips.html
+++ b/tips.html
@@ -91,7 +91,6 @@
       position: relative;
     }
     .videos .videos-content,
-    .disting .content,
     .tips-tools .tooly {
       display: flex;
       justify-content: space-between;
@@ -116,6 +115,12 @@
       color: var(--third-color);
       font-weight: 400;
     }
+    .disting .content {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      justify-content: center;
+      align-items: center;
+    }
     .disting .content .info {
       padding: 0 30px 0 0;
       background-color: #f8f9fc;
@@ -131,7 +136,7 @@
       margin-top: 50px;
     }
     .disting .content .disting-img {
-      width: 70%;
+      width: 100%;
       height: 100%;
     }
     .disting .content .disting-img img {
@@ -142,26 +147,51 @@
       width: 85%;
       margin: 0 auto;
     }
+    .tips-tools .content,
+    .tips-tools .content .toolys .tooly {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+    .tips-tools .content .toolys {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      justify-content: center;
+      align-items: flex-start;
+      grid-gap: 20px;
+      margin-bottom: 20px;
+    }
+
     .tips-tools .tooly {
       background-color: var(--third-color);
-      box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
-      margin-bottom: 20px;
     }
     .tips-tools .tooly .info {
       width: 100%;
-      padding: 0 30px;
+      padding: 30px 30px 50px;
     }
+
     .tips-tools .tooly .info .cta {
       margin-top: 40px;
     }
     .tips-tools .tooly .tolly-img {
       width: 100%;
-      height: 500px;
+      height: 100%;
     }
     .tips-tools .tooly .tolly-img img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+    .tools-content {
+      height: 285px;
+      width: 100%;
+      padding: 30px;
+      background: linear-gradient(136.49deg, #2d72b9 0%, #2b93b2 100%);
+      color: var(--third-color);
+    }
+    .tools-content h3 {
+      font-size: 56px;
     }
     .join {
       width: 100%;
@@ -301,7 +331,51 @@
       top: 0;
       left: 0;
     }
+    .tips-tools {
+      margin-bottom: 20px;
+    }
+    .tips-tools .tooly .tolly-img.imgs {
+      height: 477px;
+    }
+    .btu-tools {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: var(--third-color);
+      box-shadow: none !important;
+      border-bottom: 1px solid #f1f1f1;
+    }
+    .btu-tools .icons-cal {
+      background-color: var(--third-color);
+      box-shadow: none !important;
+    }
+    .btu-tools .icons-cal .imgy {
+      width: 120px;
+      height: auto;
+    }
+    .btu-tools .icons-cal .imgy img {
+      width: 100%;
+      height: 100%;
+    }
+    .btu-tools .info {
+      padding: 30px 30px 50px;
+    }
+    .btu-tools .info h4 {
+      color: var(--second-color);
+      font-size: 20px;
+      line-height: 1.7;
+      font-weight: 400;
+    }
+    .btu-tools .info .cta {
+      margin-top: 40px;
+    }
     @media screen and (max-width: 767px) {
+      .tips-hero {
+        height: 200px;
+      }
+      .tips-hero h1 {
+        font-size: 36px;
+      }
       .join .content h3 {
         font-size: 22px;
       }
@@ -331,7 +405,7 @@
         padding: 20px 10px 30px;
       }
       .tips-tools .tooly .tolly-img {
-        height: 200px;
+        height: auto;
       }
       .join-select .custom-select-wrapper {
         width: 90%;
@@ -358,6 +432,26 @@
       }
       .why.tips-us .content .cons .more h3 {
         font-size: 16px;
+      }
+      .tips-tools .content .toolys,
+      .disting .content {
+        grid-template-columns: 1fr;
+      }
+      .tools-content,
+      .tips-tools .tooly .tolly-img.imgs {
+        height: auto;
+      }
+      .tools-content h3 {
+        font-size: 30px;
+      }
+      .tips-tools .content .toolys div:nth-child(2) .tooly:nth-child(1) {
+        margin-bottom: 20px;
+      }
+      .btu-tools {
+        flex-direction: column;
+      }
+      .btu-tools .icons-cal {
+        margin-top: 30px;
       }
     }
   </style>
@@ -438,7 +532,7 @@
         <div class="container">
           <div class="set-color">
             <div class="content">
-              <h1>Watch our 2 min “WHY YORK” video</h1>
+              <h1>WHY YORK video</h1>
               <div class="play">
                 <div class="plays">
                   <div class="play-icon">
@@ -551,93 +645,103 @@
         <div class="content">
           <div class="info">
             <p>
-              Mentioning your promo code can be used on top of existing
-              discount/offers (Additional savings) and share the discount visual
-              if available.
+              Share your Promo Code with your customers to offer them addtional
+              saving on top of existing discounts.
+              <br />
+              Download this visual to promote your Promo Code.
             </p>
             <div class="cta">
-              <a href="imgs/promo code" target="_blank" download
-                >Download Image</a
+              <a href="imgs/promo-code.jpg" target="_blank" download
+                >Download Visual</a
               >
             </div>
           </div>
           <div class="disting-img">
-            <img src="imgs/promo code.jpg" alt="promo-code" />
+            <img src="imgs/promo-code.jpg" alt="promo-code" />
           </div>
         </div>
       </div>
     </div>
-
     <!-- Joins -->
     <div class="join">
       <div class="content">
-        <h3>5-Tools you might need?</h3>
+        <h3>Tools you might need?</h3>
       </div>
     </div>
     <!-- End Join -->
+
     <div class="tips-tools">
       <div class="container">
         <div class="content">
-          <div class="tooly">
-            <div class="info">
-              <h4>
-                BTU Calculator (Guide your customers to pick the right unit
-                capacity “BTU”).
-              </h4>
-              <div class="cta">
-                <a
-                  href="https://york.com.sa/en/btu-calculator"
-                  target="_blank"
-                  download
-                  >BTU Calculator</a
-                >
+          <div class="toolys">
+            <div>
+              <div class="btu-tools">
+                <div class="icons-cal">
+                  <div class="imgy">
+                    <img src="imgs/calculator.svg" alt="calculator" />
+                  </div>
+                </div>
+                <div class="info">
+                  <h4>
+                    BTU Calculator (Guide your customers to pick the right unit
+                    capacity “BTU”).
+                  </h4>
+                  <div class="cta">
+                    <a
+                      href="https://york.com.sa/en/btu-calculator"
+                      target="_blank"
+                      download
+                      >BTU Calculator</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="tooly">
+                <div class="info spec">
+                  <h4>
+                    Use this text template to better communicate your promo
+                    code.
+                  </h4>
+                  <div class="cta">
+                    <a href="imgs/communi-full.jpg" target="_blank" download
+                      >Download Image</a
+                    >
+                  </div>
+                </div>
+                <div class="tolly-img img-full">
+                  <img src="imgs/communi-full.jpg" alt="communi" />
+                </div>
               </div>
             </div>
-            <div class="tolly-img">
-              <img src="imgs/btu.jpg" alt="btu" />
-            </div>
-          </div>
-          <div class="tooly">
-            <div class="info">
-              <h4>Use this visual to promote your promo code.</h4>
-              <div class="cta">
-                <a href="imgs/promo.jpg" target="_blank" download
-                  >Download Image</a
-                >
+            <div>
+              <div class="tooly">
+                <div class="info">
+                  <h4>
+                    Add our WhatsApp number to receive our broadcasted messages
+                    which will help guide you on how to gain more by increasing
+                    your sales.
+                  </h4>
+                  <div class="cta">
+                    <a href="tel:966537846738" download>+966537846738</a>
+                  </div>
+                </div>
+                <div class="tolly-img imgs">
+                  <img src="imgs/whatsapp.jpg" alt="WhatsApp" />
+                </div>
               </div>
-            </div>
-            <div class="tolly-img">
-              <img src="imgs/promo.jpg" alt="promo" />
-            </div>
-          </div>
-          <div class="tooly">
-            <div class="info">
-              <h4>
-                Use this text template to better communicate your promo code.
-              </h4>
-              <div class="cta">
-                <a href="imgs/communi-full.jpg" target="_blank" download
-                  >Download Image</a
-                >
+              <div class="tooly">
+                <div class="info">
+                  <h4>Use this visual to promote your promo code.</h4>
+                  <div class="cta">
+                    <a href="imgs/promo.jpg" target="_blank" download
+                      >Download Image</a
+                    >
+                  </div>
+                </div>
+                <div class="tolly-img">
+                  <img src="imgs/promo.jpg" alt="promo" />
+                </div>
               </div>
-            </div>
-            <div class="tolly-img">
-              <img src="imgs/communi.jpg" alt="communi" />
-            </div>
-          </div>
-          <div class="tooly">
-            <div class="info">
-              <h4>
-                Add our WhatsApp number to receive our broadcasted messages
-                which will help guide you on how to gain more by increasing your
-                sales.
-              </h4>
-              <div class="cta">
-                <a href="tel:966537846738" download>+966537846738</a>
-              </div>
-            </div>
-            <div class="tolly-img imgs">
-              <img src="imgs/whatsapp.jpg" alt="WhatsApp" />
             </div>
           </div>
         </div>
