--- a/tips-ar.html
+++ b/tips-ar.html
@@ -498,6 +498,15 @@
       .ar .tools-content h3 {
         font-size: 21px;
       }
+      .ar .btu-tools .info {
+        padding: 0 10px 50px;
+      }
+      .ar .tips-tools .tooly .info {
+        text-align: right;
+      }
+      .ar .join .content h3 {
+        padding: 0 10px;
+      }
     }
   </style>
   <body>
