--- a/tips.html
+++ b/tips.html
@@ -453,6 +453,9 @@
       .btu-tools .icons-cal {
         margin-top: 30px;
       }
+      .btu-tools .info {
+        padding: 30px 30px 50px 15px;
+      }
     }
   </style>
   <body>
