--- a/tips.html
+++ b/tips.html
@@ -197,110 +197,7 @@
       width: 100%;
     }
     .join-select .content {
-      justify-content: space-around;
-    }
-
-    .join-select .custom-select-wrapper {
-      position: relative;
-      user-select: none;
-      width: 25%;
-    }
-    .join-select .custom-select {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      border-width: 0 2px 0 2px;
-      border-style: solid;
-      border-color: #394a6d;
-    }
-    .join-select .custom-select__trigger {
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 22px;
-      font-size: 20px;
-      font-weight: 300;
-      color: #3b3b3b;
-      height: 60px;
-      line-height: 60px;
-      background: #ffffff;
-      cursor: pointer;
-      border-width: 2px 0 2px 0;
-      border-style: solid;
-      border-color: #394a6d;
-    }
-    .join-select .custom-options {
-      position: absolute;
-      display: block;
-      bottom: 100%;
-      left: 0;
-      right: 0;
-      border: 2px solid #394a6d;
-      border-top: 0;
-      background: #fff;
-      transition: all 0.5s;
-      opacity: 0;
-      visibility: hidden;
-      pointer-events: none;
-      z-index: 2;
-    }
-    .join-select .custom-select.open .custom-options {
-      opacity: 1;
-      visibility: visible;
-      pointer-events: all;
-    }
-    .join-select .custom-option {
-      position: relative;
-      display: block;
-      padding: 0 22px 0 22px;
-      font-size: 22px;
-      font-weight: 300;
-      color: #3b3b3b;
-      line-height: 60px;
-      cursor: pointer;
-      transition: all 0.5s;
-      text-align: left;
-    }
-    .join-select .custom-option:hover {
-      cursor: pointer;
-      background-color: #b2b2b2;
-    }
-    .join-select .custom-option.selected {
-      color: #ffffff;
-      background-color: #305c91;
-    }
-    .join-select .arrow {
-      position: relative;
-      height: 15px;
-      width: 15px;
-    }
-    .join-select .arrow::before,
-    .arrow::after {
-      content: "";
-      position: absolute;
-      bottom: 0px;
-      width: 0.15rem;
-      height: 100%;
-      transition: all 0.5s;
-    }
-    .join-select .arrow::before {
-      left: -5px;
-      transform: rotate(45deg);
-      background-color: #394a6d;
-    }
-    .join-select .arrow::after {
-      left: 5px;
-      transform: rotate(-45deg);
-      background-color: #394a6d;
-    }
-    .join-select .open .arrow::before {
-      left: -5px;
-      transform: rotate(-45deg);
-    }
-    .join-select .open .arrow::after {
-      left: 5px;
-      transform: rotate(45deg);
+      justify-content: flex-start;
     }
 
     #player .player .vp-title {
@@ -364,11 +261,149 @@
       color: var(--second-color);
       font-size: 20px;
       line-height: 1.7;
+      font-weight: 600;
+    }
+    .btu-tools .info p {
+      color: var(--second-color);
+      font-size: 18px;
+      line-height: 1.4;
       font-weight: 400;
     }
     .btu-tools .info .cta {
       margin-top: 40px;
     }
+
+    .join-select .radio {
+      position: relative;
+      cursor: pointer;
+      line-height: 20px;
+      font-size: 18px;
+      margin: 25px;
+      margin-left: 0;
+      display: flex;
+    }
+    .join-select .radio .label {
+      position: relative;
+      display: block;
+      float: left;
+      margin-right: 10px;
+      width: 20px;
+      height: 20px;
+      border: 2px solid #c8ccd4;
+      border-radius: 100%;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .join-select .radio .label:after {
+      content: "";
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      width: 10px;
+      height: 10px;
+      border-radius: 100%;
+      background: var(--third-color);
+      transform: scale(0);
+      transition: all 0.2s ease;
+      opacity: 0.08;
+      pointer-events: none;
+    }
+    .join-select .radio:hover .label:after {
+      transform: scale(3.6);
+    }
+    .join-select input[type="radio"]:checked + .label {
+      border-color: var(--third-color);
+    }
+    .join-select input[type="radio"]:checked + .label:after {
+      transform: scale(1);
+      transition: all 0.2s cubic-bezier(0.35, 0.9, 0.4, 0.9);
+      opacity: 1;
+    }
+    .join-select .cntr {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      text-align: center;
+      margin-top: 20px;
+    }
+    .join-select .hidden {
+      display: none;
+    }
+    .join-select .form__group {
+      position: relative;
+      padding: 15px 0 0;
+      margin-top: 10px;
+      width: 35%;
+    }
+
+    .join-select .form__field {
+      font-family: inherit;
+      width: 100%;
+      border: 0;
+      border-bottom: 2px solid var(--third-color);
+      outline: 0;
+      font-size: 1.3rem;
+      color: var(--third-color);
+      padding: 7px 0;
+      background: transparent;
+      transition: border-color 0.2s;
+    }
+    .join-select .form__field::placeholder {
+      color: transparent;
+    }
+    .join-select .form__field:placeholder-shown ~ .form__label {
+      font-size: 1.3rem;
+      cursor: text;
+      top: 20px;
+    }
+
+    .join-select .form__label {
+      position: absolute;
+      top: 0;
+      display: block;
+      transition: 0.2s;
+      font-size: 1rem;
+      color: var(--third-color);
+    }
+
+    .join-select .form__field:focus {
+      padding-bottom: 6px;
+      font-weight: 700;
+      border-width: 3px;
+      border-color: var(--third-color);
+      border-image-slice: 1;
+    }
+    .join-select .form__field:focus ~ .form__label {
+      position: absolute;
+      top: 0;
+      display: block;
+      transition: 0.2s;
+      font-size: 1rem;
+      color: var(--third-color);
+      font-weight: 700;
+    }
+
+    /* reset input */
+    .join-select .form__field:required,
+    .join-select .form__field:invalid {
+      box-shadow: none;
+    }
+
+    .join-select .sub-bn {
+      margin-top: 30px;
+    }
+    .join-select .sub-bn button {
+      border: none;
+      background: var(--third-color);
+      padding: 10px 30px;
+      font-size: 16px;
+      font-weight: 500;
+      transition: 0.3s;
+      cursor: pointer;
+    }
+    .join-select .sub-bn button:hover {
+      opacity: 0.9;
+    }
+
     @media screen and (max-width: 767px) {
       .tips-hero {
         height: 200px;
@@ -407,10 +442,7 @@
       .tips-tools .tooly .tolly-img {
         height: auto;
       }
-      .join-select .custom-select-wrapper {
-        width: 90%;
-        margin-top: 20px;
-      }
+
       .disting .content .info {
         padding: 0 0 50px 0;
         text-align: left;
@@ -455,6 +487,15 @@
       }
       .btu-tools .info {
         padding: 30px 30px 50px 15px;
+      }
+      .join-select .cntr {
+        flex-direction: column;
+      }
+      .join-select .cntr {
+        align-items: flex-start;
+      }
+      .join-select .form__group {
+        width: 100%;
       }
     }
   </style>
@@ -685,10 +726,10 @@
                   </div>
                 </div>
                 <div class="info">
-                  <h4>
-                    BTU Calculator (Guide your customers to pick the right unit
-                    capacity “BTU”).
-                  </h4>
+                  <h4>Use the BTU Calculator</h4>
+                  <p>
+                    Guide your customers to pick the right unit capacity “BTU”.
+                  </p>
                   <div class="cta">
                     <a
                       href="https://york.com.sa/en/btu-calculator"
@@ -702,12 +743,12 @@
               <div class="tooly">
                 <div class="info spec">
                   <h4>
-                    Use this text template to better communicate your promo
+                    Use this visual to show your customers how to use your promo
                     code.
                   </h4>
                   <div class="cta">
                     <a href="imgs/communi-full.jpg" target="_blank" download
-                      >Download Image</a
+                      >Download Visual</a
                     >
                   </div>
                 </div>
@@ -725,7 +766,9 @@
                     your sales.
                   </h4>
                   <div class="cta">
-                    <a href="tel:966537846738" download>+966537846738</a>
+                    <a href="https://wa.me/00966537846738" download
+                      >+966537846738</a
+                    >
                   </div>
                 </div>
                 <div class="tolly-img imgs">
@@ -737,7 +780,7 @@
                   <h4>Use this visual to promote your promo code.</h4>
                   <div class="cta">
                     <a href="imgs/promo.jpg" target="_blank" download
-                      >Download Image</a
+                      >Download Visual</a
                     >
                   </div>
                 </div>
@@ -753,25 +796,45 @@
 
     <!-- Joins -->
     <div class="join join-select">
-      <div class="content">
-        <h3>What is your preferred type of communication?</h3>
-        <div class="custom-select-wrapper">
-          <div class="custom-select">
-            <div class="custom-select__trigger">
-              <span>Email</span>
-              <div class="arrow"></div>
-            </div>
-            <div class="custom-options">
-              <span class="custom-option selected" data-value="Email"
-                >Email</span
-              >
-              <span class="custom-option" data-value="SMS">SMS</span>
-              <span class="custom-option" data-value="WhatsApp">WhatsApp</span>
-              <span class="custom-option" data-value="Phone call"
-                >Phone call</span
-              >
-              <span class="custom-option" data-value="Other">Other</span>
-            </div>
+      <div class="container">
+        <div class="join-heady">
+          <div class="content">
+            <h3>What is your preferred type of communication?</h3>
+          </div>
+          <div class="cntr">
+            <label for="opt1" class="radio">
+              <input type="radio" name="rdo" id="opt1" class="hidden" />
+              <span class="label"></span>Email
+            </label>
+
+            <label for="opt2" class="radio">
+              <input type="radio" name="rdo" id="opt2" class="hidden" />
+              <span class="label"></span>SMS
+            </label>
+
+            <label for="opt3" class="radio">
+              <input type="radio" name="rdo" id="opt3" class="hidden" />
+              <span class="label"></span>WhatsApp
+            </label>
+
+            <label for="opt4" class="radio">
+              <input type="radio" name="rdo" id="opt4" class="hidden" />
+              <span class="label"></span>Phone call
+            </label>
+          </div>
+          <div class="form__group field">
+            <input
+              type="input"
+              class="form__field"
+              placeholder="Other"
+              name="name"
+              id="name"
+              required
+            />
+            <label for="name" class="form__label">Other</label>
+          </div>
+          <div class="sub-bn">
+            <button class="suby">Submit</button>
           </div>
         </div>
       </div>
@@ -792,33 +855,6 @@
       closeVideo.addEventListener("click", function () {
         watch.classList.remove("view");
         videoPlay.setAttribute("src", "");
-      });
-
-      // Selectbox
-      document
-        .querySelector(".custom-select-wrapper")
-        .addEventListener("click", function () {
-          this.querySelector(".custom-select").classList.toggle("open");
-        });
-
-      for (const option of document.querySelectorAll(".custom-option")) {
-        option.addEventListener("click", function () {
-          if (!this.classList.contains("selected")) {
-            this.parentNode
-              .querySelector(".custom-option.selected")
-              .classList.remove("selected");
-            this.classList.add("selected");
-            this.closest(".custom-select").querySelector(
-              ".custom-select__trigger span"
-            ).textContent = this.textContent;
-          }
-        });
-      }
-      window.addEventListener("click", function (e) {
-        const select = document.querySelector(".custom-select");
-        if (!select.contains(e.target)) {
-          select.classList.remove("open");
-        }
       });
     </script>
   </body>
