--- a/tips.html
+++ b/tips.html
@@ -576,7 +576,7 @@
         <div class="container">
           <div class="set-color">
             <div class="content">
-              <h1>WHY YORK video</h1>
+              <h1>WHY YORK</h1>
               <div class="play">
                 <div class="plays">
                   <div class="play-icon">
@@ -640,7 +640,7 @@
     <!-- Join -->
     <div class="join">
       <div class="content">
-        <h3>3-Watch our KASH program videos</h3>
+        <h3>3-Learn more about KASH program</h3>
       </div>
     </div>
     <!-- End Join -->
@@ -689,14 +689,14 @@
         <div class="content">
           <div class="info">
             <p>
-              Share your Promo Code with your customers to offer them addtional
+              Share your promo code with your customers to offer them addtional
               saving on top of existing discounts.
               <br />
               Download this visual to promote your Promo Code.
             </p>
             <div class="cta">
               <a href="imgs/promo-code.jpg" target="_blank" download
-                >Download Visual</a
+                >Download ad</a
               >
             </div>
           </div>
@@ -766,7 +766,7 @@
                     your sales.
                   </h4>
                   <div class="cta">
-                    <a href="https://wa.me/00966537846738" download
+                    <a href="https://wa.me/00966537846738" target="_blank"
                       >+966537846738</a
                     >
                   </div>
