--- a/tips-ar.html
+++ b/tips-ar.html
@@ -634,10 +634,7 @@
           <div class="container">
             <div class="set-color">
               <div class="content">
-                <h1>
-                  مشاهدة الفيديو التعريفي عبارة عن دقيقتين للتعرف على يورك و ما
-                  يميزها.
-                </h1>
+                <h1>لماذا يورك</h1>
                 <div class="play">
                   <div class="plays">
                     <div class="play-icon">
@@ -701,7 +698,7 @@
       <!-- Join -->
       <div class="join">
         <div class="content">
-          <h3>3-شاهد فيديوهات برنامج KASH</h3>
+          <h3>3-تعرف على المزيد حول برنامج KASH</h3>
         </div>
       </div>
       <!-- End Join -->
@@ -827,7 +824,7 @@
                       طرق جديدة لزيادة مبيعاتك و غيرها.
                     </h4>
                     <div class="cta">
-                      <a href="https://wa.me/00966537846738" download
+                      <a href="https://wa.me/00966537846738" target="_blank"
                         >966537846738+</a
                       >
                     </div>
